--- a/fishcreek.css
+++ b/fishcreek.css
@@ -1,21 +1,35 @@
-body {background-color: #6699FF;
+body
+ {background-color: #6699FF;
   font-family: Verdana;
   color: #D5E3FF}
-header {background-color: #6699FF;
+header
+ {background-color: #6699FF;
   font-family: serif;
   color: #003366}
-h1 {line-height: 200%;}
-nav {font-weight: bold;}
-.category {
-  font-weight: bold;
-  background-color: #6699FF;
-  color: #003366;
-  font-size: 1.1em
-}
-footer {font-size: 0.7em;
+h1
+ {text-align: center;}
+nav
+ {font-weight: bold;
+ text-align: center;}
+footer
+ {font-size: 0.7em;
   font-style: italic;}
+img
+  {border-style: : none;}
+footer nav{
+  text-align: left;
+}
 #wrapper {
   width: 80%;
   margin-right: auto;
   margin-left: auto;
+  min-width: 700px;
+  max-width: 1024px;
+}
+.category {
+  font-weight: bold;
+  background-color: #6699FF;
+  color: #003366;
+  font-size: 1.1em;
+  text-shadow: 1px 1px 1px #667;
 }
