--- a/fishcreek.css
+++ b/fishcreek.css
@@ -14,10 +14,9 @@ h1 {
   font-size: 3em;
   padding: 10px;
   line-height: 150%;
-  text-shadow:color: #CCCCCC;
+  text-shadow: #CCCCCC;
 }
 nav {
-  position: relative;
   font-weight: bold;
   float: left;
   width: 150px
@@ -32,13 +31,11 @@ img {
   border-style: none;
 }
 main {
-  position: relative;
   margin-left: 180px;
   padding-right: 20px;
   padding-bottom: 20px;
 }
 #wrapper {
-  width: 80%;
   margin-right: auto;
   margin-left: auto;
   min-width: 700px;
@@ -76,4 +73,96 @@ a:visited {
 }
 a:hover {
   color: #CCCCCC;
+}
+#mobile { display: none; }
+#desktop { display: inline; }
+@media only screen and (max-width: 1024px) {
+  body {
+    margin: 0px;
+    padding: 0px;
+    background-color: white;
+    background-image: none;
+  }
+
+  #wrapper {
+    width: auto;
+    min-width: 0;
+    margin: 0;
+  }
+
+  h1 {
+    margin: 0;
+    font-size: 8.1em;
+    line-height: 200%;
+    text-align: center;
+  }
+
+  nav {
+    float: none;
+    width: auto;
+  }
+
+  nav li {
+    display: inline-block;
+  }
+
+  nav a {
+    padding: 1em;
+    font-size: 1.2em;
+    border-style: none;
+  }
+
+  nav ul {
+    text-align: center;
+    padding: 0px;
+    margin: 0px;
+  }
+
+  main {
+    font-size: 90%;
+    margin: 0px;
+    padding-left: 2em;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-right: 0px;
+  }
+
+  footer {
+    margin: 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .header-site{
+     background: url("lilfish.gif") no-repeat top center;
+  }
+
+  h1 {
+    font-size: 1.5em;
+    line-height: 120%;
+  }
+
+  nav a {
+    display: block;
+    padding: 0.2em;
+    font-size: 1.3em;
+    border-bottom: 1px solid #330000;
+  }
+  nav li {
+    display: block;
+  }
+  nav ul {
+    text-align: left;
+  }
+
+  main {
+    padding-left: 1em;
+  }
+
+  .category {
+    text-shadow: none;
+  }
+
+  #mobile { display: inline; }
+  #desktop { display: none; }
 }
